jobs/OpenCOG_U1404_CogUtil.log
Started by user [8mha:////4L2jTPWu9zIb56dnp8RqVObesKKV2DVGI0jJXlam1DqAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Building in workspace /var/lib/jenkins/workspace/OpenCOG_U1404_CogUtil
[OpenCOG_U1404_CogUtil] $ /bin/sh -xe /tmp/jenkins240233134742706644.sh
+ COGDIR=../OpenCOG_U1404
+ . ../OpenCOG_U1404/build.docker/docker.env
+ CID=d991adfd3e64863e9c336c55bd67f81d02f14856ec4a5159f4e89dbe15889b47
+ DKRUNROOT=docker exec --user root   d991adfd3e64863e9c336c55bd67f81d02f14856ec4a5159f4e89dbe15889b47
+ DKRUNUSER=docker exec --user jenkins  d991adfd3e64863e9c336c55bd67f81d02f14856ec4a5159f4e89dbe15889b47
+ UID=125
+ GID=132
+ LOGFILE=/var/lib/jenkins/jobs/OpenCOG_U1404_CogUtil/builds/338/log
+ cat


**********************************************************
**********************************************************
**********************************************************
**********************************************************
*****                                                *****
*****                  Cogutil TEST                *****
*****                                                *****
**********************************************************
**********************************************************
**********************************************************
**********************************************************


+ echo GIT_COMMIT=
GIT_COMMIT=
+ echo GIT_BRANCH=
GIT_BRANCH=
+ echo GIT_URL=
GIT_URL=
+ WDIR=cogutil
+ JOBDIR=../OpenCOG_U1404/dependencies
+ cat
+ chmod +x ../OpenCOG_U1404/dependencies/job1
+ docker exec --user jenkins d991adfd3e64863e9c336c55bd67f81d02f14856ec4a5159f4e89dbe15889b47 bash dependencies/job1
+ cd cogutil
+ cd build
+ make -j8 test
[  5%] Building CXX object opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o
In file included from /home/opencog/cogutil/opencog/util/mt19937ar.cc:26:0:
/home/opencog/cogutil/opencog/util/numeric.h: In function 'bool opencog::is_approx_eq_ulp(double, double, long int)':
/home/opencog/cogutil/opencog/util/numeric.h:306:49: error: expected ',' before ')' token
  static_assert(sizeof(int64_t) == sizeof(double));
                                                 ^
/home/opencog/cogutil/opencog/util/numeric.h:306:49: error: expected string-literal before ')' token
/home/opencog/cogutil/opencog/util/numeric.h:307:51: error: expected ',' before ')' token
  static_assert(sizeof(int64_t) == sizeof(long int));
                                                   ^
/home/opencog/cogutil/opencog/util/numeric.h:307:51: error: expected string-literal before ')' token
make[3]: *** [opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o] Error 1
make[2]: *** [opencog/util/CMakeFiles/cogutil.dir/all] Error 2
make[1]: *** [CMakeFiles/test.dir/rule] Error 2
make: *** [test] Error 2
+ DSTATUS=TESTFAIL
+ /var/lib/jenkins/status/updateStatus TESTFAIL /var/lib/jenkins/jobs/OpenCOG_U1404_CogUtil/builds/338/log OpenCOG_U1404_CogUtil
Auto packing the repository in background for optimum performance.
See "git help gc" for manual housekeeping.
error: The last gc run reported the following. Please correct the root cause
and remove .git/gc.log.
Automatic cleanup will not be performed until the file is removed.

error: pack-objects died of signal 15
error: failed to run repack

Already up-to-date.
